--- a/_notebooks/2020-7-28-Social-Distancing-1969.ipynb
+++ b/_notebooks/2020-7-28-Social-Distancing-1969.ipynb
@@ -268,7 +268,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Social Distancing since 1969\n",
+        "# Social Distancing Since 1969\n",
         "> Close but not too close\n",
         "\n",
         "- toc: false\n",
@@ -291,7 +291,7 @@
         "#hide\n",
         "img_url = 'https://preview.redd.it/xn5u36zjn1d51.jpg?width=640&crop=smart&auto=webp&s=b0f70913c76f605534e10afa6f270b5b2c08dfe7'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
         "#hide\n",
         "!wget https://raw.githubusercontent.com/awarischool/data-science/master/image-colorizer/deoldify_wrapper.py"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "#hide\n",
         "from deoldify_wrapper import DeOldify"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "#hide\n",
         "deo = DeOldify()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
         "#hide_input\n",
         "deo.colorize(img_url)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -513,7 +513,7 @@
       "source": [
         ""
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ]
